Minor update to build scripts to support hudson build